apps/order-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-api
  namespace: mule-dev
spec:
  replicas: 2   
  selector:
    matchLabels:
      app: order-api
  template:
    metadata:
      labels:
        app: order-api
    spec:
      containers:
      - name: mule
        image: bharath2101/mule-runtime:v2
        ports:
        - containerPort: 8083
        volumeMounts:
        - name: mule-apps
          mountPath: /opt/mule/apps

      volumes:
      - name: mule-apps
        emptyDir: {}
