apps/order-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-api
  namespace: mule-dev
spec:
  selector:
    app: order-api
  ports:
  - port: 80
    targetPort: 8082
  type: NodePort
