apps/order-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-api-ingress
  namespace: mule-dev
spec:
  ingressClassName: nginx
  rules:
  - host: order.local
    http:
      paths:
      - path: /api/test
        pathType: Prefix
        backend:
          service:
            name: order-api
            port:
              number: 80
